--- a/src/06-test-risk-scores.ipynb
+++ b/src/06-test-risk-scores.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "id": "c2f8f98d-236c-4f67-9c09-90818dbdcd81",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "[5 rows x 304 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 109,
    "id": "019aaf54-ba94-4e74-bc6d-9f084871738b",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "id": "1ec9f1b0-5d8b-40e2-9006-4357ba57a974",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 111,
    "id": "0c942a13-120a-4aac-82a3-d47d071253af",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
    "id": "c39c2248-74da-45b5-9488-858a0d9a2211",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "F1-Score           0.471658  0.484739  0.485086          1"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "id": "e2402f14-0e36-464c-92d8-c4da9b98caf8",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "Accuracy Difference                  0.019174  0.010068  0.010213          0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "id": "76a21d96-b04f-434d-8864-3c9a5fd98442",
    "metadata": {},
    "outputs": [
@@ -878,9 +878,9 @@
      "output_type": "stream",
      "text": [
       "Log:\n",
-      "P(y_hat=1|A=1) - P(y_hat=1|A=0) = 0.11852688123731986\n",
+      "P(y_hat=1|A=1) - P(y_hat=1|A=0) = 0.11625651992007055\n",
       "SP:\n",
-      "P(y_hat=1|A=1) - P(y_hat=1|A=0) = 0.023667166907369253\n",
+      "P(y_hat=1|A=1) - P(y_hat=1|A=0) = 0.040622915626858935\n",
       "EO:\n",
       "P(y_hat=1|A=1) - P(y_hat=1|A=0) = 0.01908916255018739\n"
      ]
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 115,
    "id": "4500ca11-7bcf-44d0-933c-e0ec11cfcabe",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 120,
    "id": "cf096cbf-16a0-483e-9475-93b7ed6d6d33",
    "metadata": {},
    "outputs": [
@@ -1070,24 +1070,21 @@
      "output_type": "stream",
      "text": [
       "Log:\n",
-      "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.011153121877831185\n",
+      "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.01115312187783113\n",
       "P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = 0.061569190176363864\n",
       "SP:\n",
       "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.011270600947347553\n",
       "P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = 0.07249432993750904\n",
       "EO:\n",
-      "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.015842253303519682\n",
-      "P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = 0.0814027177143326\n",
-      "If:\n",
-      "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.0148412082985388\n",
-      "P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = 0.08066751301505892\n"
+      "P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = 0.015842253303519738\n",
+      "P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = 0.0814027177143326\n"
      ]
     }
    ],
    "source": [
     "# log\n",
-    "p_a1y0 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_log'] >= t).astype(int) == 0)].mean()\n",
-    "p_a0y0 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_log'] >= t).astype(int) == 0)].mean()\n",
+    "p_a1y0 = 1 - df['y_exit12'][(df['female'] == 1) & ((df['risk_score_log'] >= t).astype(int) == 0)].mean()\n",
+    "p_a0y0 = 1 - df['y_exit12'][(df['female'] == 0) & ((df['risk_score_log'] >= t).astype(int) == 0)].mean()\n",
     "\n",
     "p_a1y1 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_log'] >= t).astype(int) == 1)].mean()\n",
     "p_a0y1 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_log'] >= t).astype(int) == 1)].mean()\n",
@@ -1097,8 +1094,8 @@
     "print('P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = ' + str(np.abs(p_a1y1 - p_a0y1)))\n",
     "\n",
     "# sp\n",
-    "p_a1y0 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_sp'] >= t).astype(int) == 0)].mean()\n",
-    "p_a0y0 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_sp'] >= t).astype(int) == 0)].mean()\n",
+    "p_a1y0 = 1 - df['y_exit12'][(df['female'] == 1) & ((df['risk_score_sp'] >= t).astype(int) == 0)].mean()\n",
+    "p_a0y0 = 1 - df['y_exit12'][(df['female'] == 0) & ((df['risk_score_sp'] >= t).astype(int) == 0)].mean()\n",
     "\n",
     "p_a1y1 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_sp'] >= t).astype(int) == 1)].mean()\n",
     "p_a0y1 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_sp'] >= t).astype(int) == 1)].mean()\n",
@@ -1108,8 +1105,8 @@
     "print('P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = ' + str(np.abs(p_a1y1 - p_a0y1)))\n",
     "\n",
     "# eo\n",
-    "p_a1y0 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_eo'] >= t).astype(int) == 0)].mean()\n",
-    "p_a0y0 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_eo'] >= t).astype(int) == 0)].mean()\n",
+    "p_a1y0 = 1 - df['y_exit12'][(df['female'] == 1) & ((df['risk_score_eo'] >= t).astype(int) == 0)].mean()\n",
+    "p_a0y0 = 1 - df['y_exit12'][(df['female'] == 0) & ((df['risk_score_eo'] >= t).astype(int) == 0)].mean()\n",
     "\n",
     "p_a1y1 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_eo'] >= t).astype(int) == 1)].mean()\n",
     "p_a0y1 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_eo'] >= t).astype(int) == 1)].mean()\n",
@@ -1119,15 +1116,15 @@
     "print('P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = ' + str(np.abs(p_a1y1 - p_a0y1)))\n",
     "\n",
     "# if\n",
-    "p_a1y0 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_if'] >= t).astype(int) == 0)].mean()\n",
-    "p_a0y0 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_if'] >= t).astype(int) == 0)].mean()\n",
+    "# p_a1y0 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_if'] >= t).astype(int) == 0)].mean()\n",
+    "# p_a0y0 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_if'] >= t).astype(int) == 0)].mean()\n",
     "\n",
-    "p_a1y1 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_if'] >= t).astype(int) == 1)].mean()\n",
-    "p_a0y1 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_if'] >= t).astype(int) == 1)].mean()\n",
+    "# p_a1y1 = df['y_exit12'][(df['female'] == 1) & ((df['risk_score_if'] >= t).astype(int) == 1)].mean()\n",
+    "# p_a0y1 = df['y_exit12'][(df['female'] == 0) & ((df['risk_score_if'] >= t).astype(int) == 1)].mean()\n",
     "\n",
-    "print('If:')\n",
-    "print('P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = ' + str(np.abs(p_a1y0 - p_a0y0)))\n",
-    "print('P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = ' + str(np.abs(p_a1y1 - p_a0y1)))"
+    "# print('If:')\n",
+    "# print('P(y=1|A=1,y_hat=0) - P(y=1|A=0,y_hat=0) = ' + str(np.abs(p_a1y0 - p_a0y0)))\n",
+    "# print('P(y=1|A=1,y_hat=1) - P(y=1|A=0,y_hat=1) = ' + str(np.abs(p_a1y1 - p_a0y1)))"
    ]
   },
   {
